# ALBO

./: .gitignore  CMakeLists.txt  LICENSE  README.md  REQUIREMENTS.md  albo_simulation.db  dependency list.txt  test_setup.txt  todo_list.txt  universal_candidates.txt
external libraries/openGL_GUI/: CMakeLists.txt
external libraries/openGL_GUI/include/: GUILibrary.hpp  InputManager.hpp
external libraries/openGL_GUI/openGL_GUI/: CMakeLists.txt
external libraries/openGL_GUI/openGL_GUI/include/: RenderManager.hpp  TextManager.hpp
external libraries/openGL_GUI/openGL_GUI/src/: InputManager.cpp
external libraries/openGL_GUI/src/: GUILibrary.cpp  RenderManager.cpp  TextManager.cpp  main.cpp
include/: config.h
include/cryptowrapper/: X25519.h  aes256.h  argon2id.h  crypto.h  ed25519.h  password.h  secure_mem.h  sha256.h
include/debugging/: debug.h
include/graphical/universal/: login_dialog.h  main_window.h  network_controller.h
include/linux/network/: console_manager.h  file_transfer_manager.h  packet_dispatcher.h  socket_manager.h
include/network/linux/: socket_manager.h
include/network/linux/client/: crypto_service.h  file_transfer_manager.h  identity_manager.h  packet_dispatcher.h
include/network/linux/server/: auth_handler.h  rate_limiter.h  routing_handler.h
include/network/server/: auth_handler.h  rate_limiter.h  routing_handler.h
include/network/universal/: config_manager.h  database.h  hex_utils.h  packet.h  professionalprovider.h  protocol.h  secure_socket.h  session_registry.h
include/network/win/: network_boiler.h
include/universal/: config.h
include/universal/cryptowrapper/: X25519.h  aes256.h  sha256.h
include/universal/graphical/: main_window.h  network_controller.h
include/universal/network/: auth_handler.h  crypto_service.h  hex_utils.h  identity_manager.h  packet.h  professionalprovider.h  routing_handler.h  secure_socket.h  session_registry.h
include/win/network/: network_boiler.h
src/: .X25519.cpp.un~  X25519.cpp  X25519.cpp~  aes256.cpp  argon2id.cpp  crypto.cpp  main.cpp  password.cpp  sha256.cpp
src/debugging/: debug.cpp  test_ed25519.cpp
src/graphical/linux/: main.cpp
src/graphical/universal/: login_dialog.cpp  main_window.cpp  network_controller.cpp
src/linux/graphical/: main.cpp
src/linux/network/: client.cpp  console_manager.cpp  file_transfer_manager.cpp  secure_mem.cpp  server.cpp  socket_manager.cpp
src/network/client/: console_manager.cpp  crypto_service.cpp  file_transfer_manager.cpp  identity_manager.cpp
src/network/linux/: client.cpp  secure_mem.cpp  server.cpp  socketHandler.cpp  socket_manager.cpp
src/network/server/: auth_handler.cpp  rate_limiter.cpp  routing_handler.cpp
src/network/universal/: config_manager.cpp  database.cpp  ed25519.cpp  professionalprovider.cpp  secure_socket.cpp
src/network/win/: client.cpp  network_boiler.cpp  secure_mem.cpp  server.cpp
src/universal/: main.cpp  main_gl.cpp
src/universal/cryptowrapper/: X25519.cpp  aes256.cpp  argon2id.cpp  ed25519.cpp  password.cpp  sha256.cpp
src/universal/debugging/: debug.cpp  test_ed25519.cpp
src/universal/graphical/: login_dialog.cpp  main_window.cpp  network_controller.cpp
src/universal/network/: auth_handler.cpp  config_manager.cpp  crypto_service.cpp  database.cpp  identity_manager.cpp  professionalprovider.cpp  rate_limiter.cpp  routing_handler.cpp  secure_socket.cpp
src/win/network/: client.cpp  network_boiler.cpp  secure_mem.cpp  server.cpp
